[package]
name = "kube-utils"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Minimal client for kubernetes internal API"
readme = "README.md"
repository = "https://github.com/DoumanAsh/kube-utils"
license = "BSL-1.0"
keywords = ["kubernetes", "client"]
categories = ["network-programming", "api-bindings"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.serde]
version = "1"
default-features = false
features = ["alloc"]

[dependencies.serde_derive]
version = "1"
default-features = false

[dependencies.serde_json]
version = "1"
default-features = false
features = ["std"]

[dependencies.ureq]
version = "3"
default-features = false
features = ["rustls-no-provider"]
